// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-indépendant > Année incomplète 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 0
dirigeant . rémunération . cotisations: 1339
dirigeant . rémunération . net: undefined
dirigeant . rémunération . net . après impôt: undefined
dirigeant . rémunération . totale: undefined
entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > Année incomplète 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1020
dirigeant . rémunération . cotisations: 1516
dirigeant . rémunération . net: 2000
dirigeant . rémunération . net . après impôt: 2000
dirigeant . rémunération . totale: 3516
entreprise . charges: 0
entreprise . chiffre d'affaires: 3516
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > Année incomplète 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1936
dirigeant . rémunération . cotisations: 1676
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 5000
dirigeant . rémunération . totale: 6676
entreprise . charges: 0
entreprise . chiffre d'affaires: 6676
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > Année incomplète 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 3463
dirigeant . rémunération . cotisations: 1941
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
dirigeant . rémunération . totale: 11941
entreprise . charges: 0
entreprise . chiffre d'affaires: 11941
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > Année incomplète 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 33202
dirigeant . rémunération . cotisations: 14491
dirigeant . rémunération . net: 100000
dirigeant . rémunération . net . après impôt: 96753
dirigeant . rémunération . totale: 114491
entreprise . charges: 0
entreprise . chiffre d'affaires: 114491
impôt . montant: 3247"
`;

exports[`calculate simulations-indépendant > Année incomplète 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 316795
dirigeant . rémunération . cotisations: 92396
dirigeant . rémunération . net: 1000000
dirigeant . rémunération . net . après impôt: 878294
dirigeant . rémunération . totale: 1092396
entreprise . charges: 0
entreprise . chiffre d'affaires: 1092396
impôt . montant: 121706

Notifications affichées : entreprise . imposition . régime . micro-entreprise . alerte seuil dépassés"
`;

exports[`calculate simulations-indépendant > DROM 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 0
dirigeant . rémunération . cotisations: undefined
dirigeant . rémunération . net: undefined
dirigeant . rémunération . net . après impôt: undefined
dirigeant . rémunération . totale: 20000
entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: 0

Notifications affichées : dirigeant . indépendant . cotisations et contributions . exonérations . DROM"
`;

exports[`calculate simulations-indépendant > acre 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 1609
dirigeant . indépendant . revenu professionnel: 15306
dirigeant . rémunération . cotisations: 2778
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 50000
dirigeant . rémunération . totale: 52778
entreprise . charges: 0
entreprise . chiffre d'affaires: 52778
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > activité 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 17858
dirigeant . rémunération . cotisations: 7057
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 19824
dirigeant . rémunération . totale: 27057
entreprise . charges: 0
entreprise . chiffre d'affaires: 27057
impôt . montant: 176"
`;

exports[`calculate simulations-indépendant > activité 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 12515
dirigeant . rémunération . cotisations: 5030
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 20000
dirigeant . rémunération . totale: 25030
entreprise . charges: 0
entreprise . chiffre d'affaires: 25030
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > années précédentes 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 16346
dirigeant . rémunération . cotisations: 6365
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 49943
dirigeant . rémunération . totale: 56365
entreprise . charges: 0
entreprise . chiffre d'affaires: 56365
impôt . montant: 57"
`;

exports[`calculate simulations-indépendant > années précédentes 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13082
dirigeant . rémunération . cotisations: 5110
dirigeant . rémunération . net: 40000
dirigeant . rémunération . net . après impôt: 40000
dirigeant . rémunération . totale: 45110
entreprise . charges: 0
entreprise . chiffre d'affaires: 45110
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > années précédentes 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 3548
dirigeant . indépendant . revenu professionnel: 9983
dirigeant . rémunération . cotisations: 4423
dirigeant . rémunération . net: 30000
dirigeant . rémunération . net . après impôt: 30000
dirigeant . rémunération . totale: 34423
entreprise . charges: 0
entreprise . chiffre d'affaires: 34423
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 17894
dirigeant . rémunération . cotisations: 11703
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 49819
dirigeant . rémunération . totale: 61703
entreprise . charges: 0
entreprise . chiffre d'affaires: 61703
impôt . montant: 181"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 16957
dirigeant . rémunération . cotisations: 8471
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 49968
dirigeant . rémunération . totale: 58471
entreprise . charges: 0
entreprise . chiffre d'affaires: 58471
impôt . montant: 32"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 17233
dirigeant . rémunération . cotisations: 9423
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 49924
dirigeant . rémunération . totale: 59423
entreprise . charges: 0
entreprise . chiffre d'affaires: 59423
impôt . montant: 76"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 16429
dirigeant . rémunération . cotisations: 6654
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 50000
dirigeant . rémunération . totale: 56654
entreprise . charges: 0
entreprise . chiffre d'affaires: 56654
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 16430
dirigeant . rémunération . cotisations: 6655
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 50000
dirigeant . rémunération . totale: 56655
entreprise . charges: 0
entreprise . chiffre d'affaires: 56655
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 166234
dirigeant . rémunération . cotisations: 73223
dirigeant . rémunération . net: 500000
dirigeant . rémunération . net . après impôt: 447615
dirigeant . rémunération . totale: 573223
entreprise . charges: 0
entreprise . chiffre d'affaires: 573223
impôt . montant: 52385

Notifications affichées : entreprise . imposition . régime . micro-entreprise . alerte seuil dépassés"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 8700
dirigeant . rémunération . cotisations: 3551
dirigeant . rémunération . net: 26449
dirigeant . rémunération . net . après impôt: 26449
dirigeant . rémunération . totale: 30000
entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 8700
dirigeant . rémunération . cotisations: 3551
dirigeant . rémunération . net: 26449
dirigeant . rémunération . net . après impôt: 26449
dirigeant . rémunération . totale: 30000
entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 8700
dirigeant . rémunération . cotisations: 3551
dirigeant . rémunération . net: 26449
dirigeant . rémunération . net . après impôt: 26449
dirigeant . rémunération . totale: 30000
entreprise . charges: 0
entreprise . chiffre d'affaires: 30000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 5800
dirigeant . rémunération . cotisations: 2442
dirigeant . rémunération . net: 17558
dirigeant . rémunération . net . après impôt: 17558
dirigeant . rémunération . totale: 20000
entreprise . charges: 0
entreprise . chiffre d'affaires: 20000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 87000
dirigeant . rémunération . cotisations: 35145
dirigeant . rémunération . net: 264855
dirigeant . rémunération . net . après impôt: 244956
dirigeant . rémunération . totale: 300000
entreprise . charges: 0
entreprise . chiffre d'affaires: 300000
impôt . montant: 19899

Notifications affichées : entreprise . imposition . régime . micro-entreprise . alerte seuil dépassés"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 87000
dirigeant . rémunération . cotisations: 35145
dirigeant . rémunération . net: 264855
dirigeant . rémunération . net . après impôt: 244956
dirigeant . rémunération . totale: 300000
entreprise . charges: 0
entreprise . chiffre d'affaires: 300000
impôt . montant: 19899

Notifications affichées : entreprise . imposition . régime . micro-entreprise . alerte seuil dépassés"
`;

exports[`calculate simulations-indépendant > cotisations forfaitaires début d'activité 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 3403
dirigeant . indépendant . revenu professionnel: 14500
dirigeant . rémunération . cotisations: 5772
dirigeant . rémunération . net: 44228
dirigeant . rémunération . net . après impôt: 44228
dirigeant . rémunération . totale: 50000
entreprise . charges: 0
entreprise . chiffre d'affaires: 50000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > cotisations minimales 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 439
dirigeant . rémunération . cotisations: 1416
dirigeant . rémunération . net: 100
dirigeant . rémunération . net . après impôt: 100
dirigeant . rémunération . totale: 1516
entreprise . charges: 0
entreprise . chiffre d'affaires: 1516
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > cotisations minimales 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 0
dirigeant . rémunération . cotisations: 118
dirigeant . rémunération . net: 100
dirigeant . rémunération . net . après impôt: 100
dirigeant . rémunération . totale: 218
entreprise . charges: 0
entreprise . chiffre d'affaires: 218
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > cotisations minimales 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 300
dirigeant . rémunération . cotisations: 234
dirigeant . rémunération . net: 800
dirigeant . rémunération . net . après impôt: 800
dirigeant . rémunération . totale: 1034
entreprise . charges: 0
entreprise . chiffre d'affaires: 1034
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 13050
dirigeant . rémunération . cotisations: 1570
dirigeant . rémunération . net: 43430
dirigeant . rémunération . net . après impôt: 43430
dirigeant . rémunération . totale: 45000
entreprise . charges: 0
entreprise . chiffre d'affaires: 45000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 2610
dirigeant . rémunération . cotisations: 1350
dirigeant . rémunération . net: 7650
dirigeant . rémunération . net . après impôt: 7650
dirigeant . rémunération . totale: 9000
entreprise . charges: 0
entreprise . chiffre d'affaires: 9000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: 984
dirigeant . indépendant . revenu professionnel: 2900
dirigeant . rémunération . cotisations: 399
dirigeant . rémunération . net: 9601
dirigeant . rémunération . net . après impôt: 9601
dirigeant . rémunération . totale: 10000
entreprise . charges: 0
entreprise . chiffre d'affaires: 10000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 4350
dirigeant . rémunération . cotisations: 791
dirigeant . rémunération . net: 14209
dirigeant . rémunération . net . après impôt: 14209
dirigeant . rémunération . totale: 15000
entreprise . charges: 0
entreprise . chiffre d'affaires: 15000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > exonération âge 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 15950
dirigeant . rémunération . cotisations: 6099
dirigeant . rémunération . net: 48901
dirigeant . rémunération . net . après impôt: 48901
dirigeant . rémunération . totale: 55000
entreprise . charges: 0
entreprise . chiffre d'affaires: 55000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > imposition à l'IS 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 29000
dirigeant . rémunération . cotisations: 12518
dirigeant . rémunération . net: 87482
dirigeant . rémunération . net . après impôt: 85496
dirigeant . rémunération . totale: 100000
entreprise . charges: 0
entreprise . chiffre d'affaires: 100000
impôt . montant: 1986"
`;

exports[`calculate simulations-indépendant > imposition à l'IS 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 29000
dirigeant . rémunération . cotisations: 12518
dirigeant . rémunération . net: 87482
dirigeant . rémunération . net . après impôt: 85496
dirigeant . rémunération . totale: 100000
entreprise . charges: 0
entreprise . chiffre d'affaires: 100000
impôt . montant: 1986"
`;

exports[`calculate simulations-indépendant > impôt sur le revenu 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 6597
dirigeant . rémunération . cotisations: 2747
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 19340
dirigeant . rémunération . totale: 22747
entreprise . charges: 0
entreprise . chiffre d'affaires: 22747
impôt . montant: 660"
`;

exports[`calculate simulations-indépendant > inversions 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 580
dirigeant . rémunération . cotisations: 1440
dirigeant . rémunération . net: 560
dirigeant . rémunération . net . après impôt: 560
dirigeant . rémunération . totale: 2000
entreprise . charges: 0
entreprise . chiffre d'affaires: 2000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 17400
dirigeant . rémunération . cotisations: 6882
dirigeant . rémunération . net: 53118
dirigeant . rémunération . net . après impôt: 53015
dirigeant . rémunération . totale: 60000
entreprise . charges: 0
entreprise . chiffre d'affaires: 60000
impôt . montant: 103"
`;

exports[`calculate simulations-indépendant > inversions 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 3463
dirigeant . rémunération . cotisations: 1941
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
dirigeant . rémunération . totale: 11941
entreprise . charges: 0
entreprise . chiffre d'affaires: 11941
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 3768
dirigeant . rémunération . cotisations: 1994
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
dirigeant . rémunération . totale: 11994
entreprise . charges: 1000
entreprise . chiffre d'affaires: 12994
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 11814
dirigeant . rémunération . cotisations: 4744
dirigeant . rémunération . net: 35996
dirigeant . rémunération . net . après impôt: 3000
dirigeant . rémunération . totale: 40740
entreprise . charges: 0
entreprise . chiffre d'affaires: 40740
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 5800
dirigeant . rémunération . cotisations: 2442
dirigeant . rémunération . net: 16558
dirigeant . rémunération . net . après impôt: 16558
dirigeant . rémunération . totale: 19000
entreprise . charges: 1000
entreprise . chiffre d'affaires: 20000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > inversions 7`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 5800
dirigeant . rémunération . cotisations: 2442
dirigeant . rémunération . net: 15558
dirigeant . rémunération . net . après impôt: 15558
dirigeant . rémunération . totale: 18000
entreprise . charges: 2000
entreprise . chiffre d'affaires: 20000
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 562
dirigeant . rémunération . cotisations: 1437
dirigeant . rémunération . net: 500
dirigeant . rémunération . net . après impôt: 500
dirigeant . rémunération . totale: 1937
entreprise . charges: 0
entreprise . chiffre d'affaires: 1937
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 714
dirigeant . rémunération . cotisations: 1463
dirigeant . rémunération . net: 1000
dirigeant . rémunération . net . après impôt: 1000
dirigeant . rémunération . totale: 2463
entreprise . charges: 0
entreprise . chiffre d'affaires: 2463
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 3`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 867
dirigeant . rémunération . cotisations: 1490
dirigeant . rémunération . net: 1500
dirigeant . rémunération . net . après impôt: 1500
dirigeant . rémunération . totale: 2990
entreprise . charges: 0
entreprise . chiffre d'affaires: 2990
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 4`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1020
dirigeant . rémunération . cotisations: 1516
dirigeant . rémunération . net: 2000
dirigeant . rémunération . net . après impôt: 2000
dirigeant . rémunération . totale: 3516
entreprise . charges: 0
entreprise . chiffre d'affaires: 3516
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 1936
dirigeant . rémunération . cotisations: 1676
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 5000
dirigeant . rémunération . totale: 6676
entreprise . charges: 0
entreprise . chiffre d'affaires: 6676
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 3463
dirigeant . rémunération . cotisations: 1941
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
dirigeant . rémunération . totale: 11941
entreprise . charges: 0
entreprise . chiffre d'affaires: 11941
impôt . montant: 0"
`;

exports[`calculate simulations-indépendant > échelle de revenus 7`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 33204
dirigeant . rémunération . cotisations: 14496
dirigeant . rémunération . net: 100000
dirigeant . rémunération . net . après impôt: 96753
dirigeant . rémunération . totale: 114496
entreprise . charges: 0
entreprise . chiffre d'affaires: 114496
impôt . montant: 3247"
`;

exports[`calculate simulations-indépendant > échelle de revenus 8`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null
dirigeant . indépendant . revenu professionnel: 316787
dirigeant . rémunération . cotisations: 92368
dirigeant . rémunération . net: 1000000
dirigeant . rémunération . net . après impôt: 878298
dirigeant . rémunération . totale: 1092368
entreprise . charges: 0
entreprise . chiffre d'affaires: 1092368
impôt . montant: 121702

Notifications affichées : entreprise . imposition . régime . micro-entreprise . alerte seuil dépassés"
`;
